kubernetes/web/web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maccas-web
  namespace: maccas-api
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: maccas-web
  replicas: 3
  template:
    metadata:
      labels:
        app: maccas-web
    spec:
      topologySpreadConstraints:
        - maxSkew: 2
          topologyKey: kubernetes.io/hostname
          labelSelector:
            matchLabels:
              app: maccas-web
          whenUnsatisfiable: ScheduleAnyway

      containers:
        - name: maccas-web
          image: maccas-web:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 3000
