kubernetes/web/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maccas-web
  namespace: maccas-api
spec:
  selector:
    app: maccas-web
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: maccas-web-canary
  namespace: maccas-api
spec:
  selector:
    app: maccas-web
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
